[project]
name = "e2e-validation-mcp"
version = "0.1.0"
description = "MCP server for running commands and E2E validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
